# roadwatch

./: .gitignore  README.md  clean.ipynb  emails.py  enrich.py  fetch_nh_geometry.py  main.py  match.py  match2.py  package-lock.json  piu_convertion.py  pyproject.toml  scaper.py  script.ipynb
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: piu_locations.json
frontend/src/: App.jsx  DefectModal.jsx  Map.jsx  Sidebar.jsx  db.js  findNearestPIU.js  geojson.js  index.css  utils.js
frontend/src/components/: ChatBot.jsx  MapControls.jsx  MenuDrawer.jsx  SearchBar.jsx  TopBar.jsx
