[project]
name = "roadwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "geopy>=2.4.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "playwright>=1.60.0",
    "requests>=2.34.2",
    "selenium>=4.44.0",
    "shapely>=2.1.2",
    "webdriver-manager>=4.1.1",
]
